--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,12 @@
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
-	<dependencies>  
+	<dependencies>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>13</version>
+        </dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
@@ -23,6 +28,15 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.3</version>
+                <configuration>
+                    <launcher>launcher</launcher>
+                    <mainClass>at.fhhagenberg.sqelevator.gui.ElevatorControlCenter</mainClass>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
