--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>at.fhhagenberg.sqelevator</groupId>
-    <artifactId>sqelevator</artifactId>
+    <artifactId>sqelevator-team1</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
     <properties>
