--- a/src/main/resources/elevatorCC.properties
+++ b/src/main/resources/elevatorCC.properties
@@ -4,6 +4,7 @@ enableMode=Enable %s mode
 manualMode=manual
 automaticMode=automatic
 alarms=Alarms
+elevators=Elevators
 payload=Payload
 speed=Speed
 targets=Targets
