--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <sonar.projectKey>project-sqelevator-mcm-team-1-1</sonar.projectKey>
 		<sonar.projectName>ElevatorCC - Team 1</sonar.projectName>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <testfx.junit.version>4.0.16-alpha</testfx.junit.version>
     </properties>
 
 	<dependencies>
@@ -23,6 +24,12 @@
             <artifactId>javafx-controls</artifactId>
             <version>13</version>
         </dependency>
+        <dependency>
+			<groupId>org.testfx</groupId>
+			<artifactId>testfx-junit5</artifactId>
+			<version>${testfx.junit.version}</version>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
