--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
 			<version>1.10.19</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.testfx</groupId>
+			<artifactId>openjfx-monocle</artifactId>
+			<version>8u76-b04</version> <!-- jdk-9+181 for Java 9 -->
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
