--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
 		<dependency>
 			<groupId>org.testfx</groupId>
 			<artifactId>openjfx-monocle</artifactId>
-			<version>8u76-b04</version> <!-- jdk-9+181 for Java 9 -->
+			<version>jdk-9+181</version> <!-- jdk-9+181 for Java 9 -->
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
