Code cleanup: gui package
* split big methods
* removed warnings
* formatted code

--- a/src/main/resources/elevatorCC.properties
+++ b/src/main/resources/elevatorCC.properties
@@ -1,10 +1,18 @@
 title=Elevator Control Center
 mode=Mode: %s
 enableMode=Enable %s mode
-manualMode=manual
+manualMode=Manual
 automaticMode=automatic
 alarms=Alarms
 elevators=Elevators
 payload=Payload
 speed=Speed
+target=Target
 targets=Targets
+floors=Floors
+doors=Doors
+column_type=Type
+column_message=Message
+edit_service_floors=Edit Services Floors
+no_floor_elevators=no elevators or no floors %s -- %s
+callinfo=Next target floor for elevator <%s> is %s
