Code cleanup: model package
* split big methods
* removed warnings
* formatted code
* externalized strings

--- a/src/main/resources/elevatorCC.properties
+++ b/src/main/resources/elevatorCC.properties
@@ -16,3 +16,11 @@ column_message=Message
 edit_service_floors=Edit Services Floors
 no_floor_elevators=no elevators or no floors %s -- %s
 callinfo=Next target floor for elevator <%s> is %s
+status_open=Open
+status_closed=Closed
+status_opening=Opening
+status_closing=Closing
+error=Error
+error_go_to_target=Failed to go to target
+error_committed_direction=Failed to set committed direction
+error_set_service_floor=Failed to set services floor
